--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="java-output-path" value="/NewsSystem/WebRoot/WEB-INF/classes"/>
-        <property name="context-root" value="/NewsLogin"/>
+        <property name="context-root" value="/news"/>
     </wb-module>
 </project-modules>
